# RecombTracer

./: .gitignore  .python-version  LICENSE  README.md  pyproject.toml  test_pbwt_simple.py  todo.md
docs/: README_zh.md
recombtracer/: __init__.py  __main__.py  cli.py  hmm.py  vcf.py
recombtracer/config/: default.yaml  software.yaml
recombtracer/core/: __init__.py  convert.py  hmm.py  pbwt.py  pipeline.py  recombiner.py  run.py  vcf.py
recombtracer/report/: __init__.py  generator.py  plots.py  stats.py
recombtracer/report/templates/: report.html.j2
recombtracer/utils/: Re_logger.py  __init__.py  configuration.py  log_utils.py  logo.py  print_logo.py  print_utils.py  print_version.py  version.py
scripts/: generate_report_test_data.py
