[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "recombtracer"
version = "0.0.1v"
description = "Recombination breakpoint detection in MAGIC populations"
readme = "README.md"
license = "MIT"
authors = ["JZHANG zhangjian199567@outlook.com"]
keywords = ["MAGIC", "recombination", "haplotype", "PBWT", "HMM", "genetics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
homepage = "https://github.com/xsx123123/RecombTracer"
repository = "https://github.com/xsx123123/RecombTracer"
packages = [{include = "recombtracer"}]
include = ["recombtracer/config/*.yaml"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
pandas = "*"
scipy = "*"
cyvcf2 = "*"
pyyaml = ">=6.0"
rich = "*"
rich-gradient = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"

[tool.poetry.scripts]
recombtracer = "recombtracer.cli:main"
