[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "recombtracer"
version = "0.0.1"
description = "Recombination breakpoint detection in MAGIC populations"
readme = "README.md"
license = "MIT"
authors = ["JZHANG zhangjian199567@outlook.com"]
keywords = ["MAGIC", "recombination", "haplotype", "PBWT", "HMM", "genetics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
homepage = "https://github.com/xsx123123/RecombTracer"
repository = "https://github.com/xsx123123/RecombTracer"
packages = [{include = "recombtracer"}]
include = [
    "recombtracer/config/*.yaml",
    "recombtracer/report/templates/*.j2",
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "2.2.6"
pandas = "2.3.3"
scipy = "1.15.3"
cyvcf2 = "0.33.0"
pyyaml = ">=6.0"
rich = "15.0.0"
rich-gradient = "0.3.12"
rich-argparse = "1.8.0"
loguru = ">=0.7.2"
jinja2 = ">=3.0"
plotly = ">=5.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"

[tool.poetry.scripts]
recombtracer = "recombtracer.cli:main"
